--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 <script type="text/javascript" src="js/jquery.SuperSlide.2.1.1.js"></script>
 
 <script type="text/javascript" src="js/swiper.js"></script>
+<link type="text/css" rel="stylesheet" href="css/index.css" />
 <link rel="stylesheet" type="text/css" href="css/swiper.css"/>
 
 <script type="text/javascript" src="js/wow.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/animate.min.css"/>
 
 <script src="js/index.js"></script>
+<script type="text/javascript">
+   
+</script>
 <!--
 <script type="text/javascript">
 if (screen.width<=1024){
@@ -261,16 +265,21 @@ else{
 <div class="header">
     <img src="images/logo.png" class="logo" alt="金马地磅汽车衡厂家" />
     <ul class="nav">
-        <li><a href="/" id="home" class="a_on"><span class="span1">网站首页</span><span class="span2">网站首页</span></a></li>
-        <li><a href="/Block/BlockContent.aspx?BlockId=1" id="gyjm"><span class="span1">关于金马</span><span class="span2">关于金马</span></a></li>
-        <li><a href="/Product/List.aspx?ClassId=5" id="cpzx"><span class="span1">产品中心</span><span class="span2">产品中心</span></a></li>
-<!--        {zyit:FriendLink:GetFriendLinkList top="1" classid="15" sort="LinkSort"}
-        <li><a href="[FriendLink:GetFriendLinkList:Field:Linkurl/]" target="[FriendLink:GetFriendLinkList:Field:LinkOpen/]" id="zncz"><span class="span1">智能称重</span><span class="span2">智能称重</span></a></li>
-        {/zyit:FriendLink:GetFriendLinkList}
--->        <li><a href="/News/List.aspx?ClassId=2" id="jmdt"><span class="span1">金马动态</span><span class="span2">金马动态</span></a></li>
-        <li><a href="/Product/List.aspx?ClassId=58" id="xcal"><span class="span1">现场案例</span><span class="span2">现场案例</span></a></li>
-        <li><a href="/Block/BlockContent.aspx?BlockId=6" id="hzhb"><span class="span1">合作伙伴</span><span class="span2">合作伙伴</span></a></li>
-        <li><a href="/Block/BlockContent.aspx?BlockId=8" id="lxfs"><span class="span1">联系方式</span><span class="span2">联系方式</span></a></li>
+        <li>
+			<a href="/" id="home" class="a_on"><span class="span1">网站首页</span><span class="span2">网站首页</span></a>
+		</li>
+        <li>
+			<a href="/Product/List.aspx?ClassId=58" id="xcal"><span class="span1">现场案例</span><span class="span2">现场案例</span></a>
+		</li>
+        <li>
+			<a href="/Block/BlockContent.aspx?BlockId=1" id="gyjm"><span class="span1">代理加盟</span><span class="span2">代理加盟</span></a>
+		</li>
+        <li>
+			<a href="/Product/List.aspx?ClassId=5" id="cpzx"><span class="span1">新闻动态</span><span class="span2">新闻动态</span></a>
+		</li>
+        <li>
+			<a href="/News/List.aspx?ClassId=2" id="jmdt"><span class="span1">关于华凌</span><span class="span2">关于华凌</span></a>
+		</li>
     </ul>
     <div class="header_r">
         <div class="header_r2"></div>
@@ -389,7 +398,7 @@ $(".nav_out_close").click( function () {
 });
 </script>
 <div id="scroll">
-	<div class="section section1">
+	<div class="section section1 fp-section fp-table active">
         <div id="focusBar">
             <a class="arrL" href="javascript:void(0)" onClick="prePage()">&nbsp;</a>
             <a class="arrR" href="javascript:void(0)" onClick="nextPage()">&nbsp;</a>
@@ -421,7 +430,7 @@ $(".nav_out_close").click( function () {
 						</a>
                     </div>
                 </li>
-                
+                <!--
                 <li id="focusIndex4" style="background:url(UserFiles/Product/image/20200514/20200514163758_7875.jpg) no-repeat center center; background-size:cover;">
                     <div class="focusL">&nbsp;</div>
                     <div class="focusR">
@@ -430,7 +439,7 @@ $(".nav_out_close").click( function () {
 						</a>
                     </div>
                 </li>
-                
+                -->
             </ul>
         </div>
    	</div>
@@ -1116,5 +1125,17 @@ $('.return_top').click(function(){
 })();
 </script>
 
+<div class="foot_div">
+	<div class="content_div">
+		<div class="space_div"></div>
+		<div class="row_div">公司名称：青岛华凌科技有限公司</div>
+		<div class="row_div">咨询热线：0532-55588351&nbsp;&nbsp;15712773653（微信同号）</div>
+		<div class="row_div">邮箱地址：qdhualing@126.com</div>
+		<div class="row_div">公司地址：青岛市北中央商务区敦化路136号西王大厦1606</div>
+	</div>
+	<div class="bah_div">
+		青岛辰麒数维软件有限公司  <a href="https://beian.miit.gov.cn" target="_blank" style="color:#999;">鲁ICP备19062226号-4</a>
+	</div>
+</div>
 </body>
 </html>
