--- a/index.html
+++ b/index.html
@@ -633,17 +633,53 @@ $(".nav_out_close").click( function () {
         });
         </script>
         <a href="/Product/List.aspx?ClassId=5" class="section3_more">了解更多</a>
+		<!--
         <div class="next_screen"><img src="images/mouse1.png" /></div>
+		-->
+	</div>
+
+	<div class="yjcp_div">
+		<div class="title_div">硬件产品</div>
+		<div class="content_div">
+			<img src="UserFiles/FriendLink/image/20211015/202110150006.png" alt="无人值守车辆自动称重系统" />
+			<div class="yjsbzc_div">
+				<div class="tit_div">硬接设备组成</div>
+				<div class="row_div">①  网络监控摄像头</div>
+				<div class="row_div">②  补光灯</div>
+				<div class="row_div">③  智能称重控制终端</div>
+				<div class="row_div">④  中控大屏幕</div>
+				<div class="row_div">⑤  自助称重终端</div>
+				<div class="row_div">⑥  自助称重一体机</div>
+				<div class="row_div">⑦  车号识别摄像头</div>
+				<div class="row_div">⑧  网络高清摄像头：对过磅过程实时监控</div>
+				<div class="row_div">⑨  红绿灯：提示司机上下磅</div>
+				<div class="row_div">⑩  地感线圈</div>
+				<div class="row_div">⑪  道闸栏杆机</div>
+				<div class="row_div">⑫  红外光栅</div>
+				<div class="row_div">⑬  IC卡读卡器</div>
+				<div class="row_div">⑭  LED显示屏</div>
+				<div class="row_div">⑮  音柱播报</div>
+				<div class="row_div">⑯  称台</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="xtywlc_div">
+		<div class="title_div">系统业务流程</div>
+		<div class="content_div">
+			<img src="UserFiles/FriendLink/image/20211015/202110150007.png" alt="无人值守车辆自动称重系统" />
+		</div>
 	</div>
 
 	<div class="section section6">
         <img src="images/section6_title.png" alt="现场案例" class="title6" />
+		<!--
         <ul class="section6_1">
-            <li><a href="/Product/List.aspx?ClassId=58">现场案例</a></li>
-<!--            <li><a href="{zyit:Product:GetClassLink ClassId="59"/}">合作伙伴</a></li>
--->            <li><a href="/Product/List.aspx?ClassId=60">解决方案</a></li>
+            <li><a href="/Product/List.aspx?ClassId=58">现场案例</a></li>            
+			<li><a href="/Product/List.aspx?ClassId=60">解决方案</a></li>
             <li><a href="/Product/List.aspx?ClassId=126">生产工艺</a></li>
         </ul>
+		-->
         <div class="section6_2">
             <!-- Swiper -->
             <div class="swiper-container3 swiper-no-swiping">
@@ -730,7 +766,9 @@ $(".nav_out_close").click( function () {
             </script>
         </div>
         <a href="/Product/List.aspx?ClassId=58" class="section6_more">了解更多</a>
+		<!--
         <div class="next_screen"><img src="images/mouse.png" /></div>
+		-->
 	</div>
 </div>
 
