--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="author" content="大连致远信息科技有限公司,Info@ZhiYuanIT.Com"/>
-<meta name="copyright" content="大连金马衡器有限公司"/>
-<title>汽车衡_地磅_地磅秤_电子地磅_电子磅秤_衡器-大连金马衡器</title>
-<meta name="keywords" content="地磅,地磅秤,电子地磅,电子磅秤,汽车衡,衡器"/>
-<meta name="description" content="大连金马衡器地磅厂家是中国衡器协会国家培训基地，以科研为龙头、以创新为手段，生产销售电子汽车衡、无人值守称重系统、电子磅秤、地磅秤、轨道衡、称重软件等，了解汽车衡价格、地磅价格请咨询厂家客服。"/>
+<meta name="author" content=""/>
+<meta name="copyright" content="青岛华凌科技有限公司"/>
+<title>网站首页</title>
+<meta name="keywords" content=""/>
+<meta name="description" content=""/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -255,21 +255,16 @@ else{
 -->
 
 <link rel="stylesheet" type="text/css" href="css/zyit.css"/>
-<link rel="stylesheet" type="text/css" href="css/zyit1600.css"/>
-<link rel="stylesheet" type="text/css" href="css/zyit1200.css"/>
-<link rel="stylesheet" type="text/css" href="css/zyit1024.css"/>
-<link rel="stylesheet" type="text/css" href="css/zyit640.css"/>
-
 </head>
 <body>
 <div class="header">
-    <img src="images/logo.png" class="logo" alt="金马地磅汽车衡厂家" />
+    <img src="images/logo.png" class="logo" alt="" />
     <ul class="nav">
         <li>
 			<a href="/" id="home" class="a_on"><span class="span1">网站首页</span><span class="span2">网站首页</span></a>
 		</li>
         <li>
-			<a href="/Product/List.aspx?ClassId=58" id="xcal"><span class="span1">现场案例</span><span class="span2">现场案例</span></a>
+			<a href="case.html" id="xcal"><span class="span1">现场案例</span><span class="span2">现场案例</span></a>
 		</li>
         <li>
 			<a href="/Block/BlockContent.aspx?BlockId=1" id="gyjm"><span class="span1">代理加盟</span><span class="span2">代理加盟</span></a>
@@ -283,28 +278,6 @@ else{
     </ul>
     <div class="header_r">
         <div class="header_r2"></div>
-        <!--搜索框开始-->
-        <script type="text/javascript" src="Product/Scripts/EncodeUtf8.js"></script>
-        <script type="text/javascript">
-            function Search() {
-                var searchParam = "f=ProductSearch";                                    //显示搜索结果的模板名
-                searchParam += "&ClassId=" + 5;                    //搜索栏目
-                searchParam += "&SearchKey=" + EncodeUtf8($.trim($("#txtProductSearch").val())); //搜索关键字
-                searchParam += "&SearchType=" + $("#ddlSearchType").val();              //搜索类型
-                searchParam += "&Custom1=" + EncodeUtf8($.trim($("#Custom1").val()));   //搜索用户自定义属性1
-                searchParam += "&Custom2=" + EncodeUtf8($.trim($("#Custom2").val()));   //搜索用户自定义属性2
-                searchParam += "&Custom3=" + EncodeUtf8($.trim($("#Custom3").val()));   //搜索用户自定义属性3
-                searchParam += "&Custom4=" + EncodeUtf8($.trim($("#Custom4").val()));   //搜索用户自定义属性4
-                searchParam += "&Custom5=" + EncodeUtf8($.trim($("#Custom5").val()));   //搜索用户自定义属性5
-                searchParam += "&Custom6=" + EncodeUtf8($.trim($("#Custom6").val()));   //搜索用户自定义属性6
-                searchParam += "&Custom7=" + EncodeUtf8($.trim($("#Custom7").val()));   //搜索用户自定义属性7
-                searchParam += "&Custom8=" + EncodeUtf8($.trim($("#Custom8").val()));   //搜索用户自定义属性8
-                searchParam += "&Custom9=" + EncodeUtf8($.trim($("#Custom9").val()));   //搜索用户自定义属性9
-                searchParam += "&Custom10=" + EncodeUtf8($.trim($("#Custom10").val())); //搜索用户自定义属性10
-                //……以上可以增加到40，根据需要
-                window.location.href = "/Product/Search.aspx?" + searchParam;
-            }
-        </script>
         <div class="header_r3">
             <input id="txtProductSearch" type="text" value="请输入关键字" onFocus="if(this.value=='请输入关键字') this.value=''" 
             onkeypress="if(event.keyCode==13){Search()}" class="header_r3_1" />
@@ -316,87 +289,6 @@ else{
     <div class="header_close"></div>
 </div>
 
-<div class="top_nav">
-    <div class="top_nav1"></div>
-    <div class="top_nav2"></div>
-    <div class="top_nav3"></div>
-</div>
-
-<div class="nav_out">
-    <img src="images/logo.png" class="nav_out1" alt="金马地磅汽车衡厂家" />
-    <div class="nav_out_close"></div>
-    <div class="nav_out2">
-        <div class="nav_out2_bg"></div>
-        <div class="nav_out3">
-            <a href="/" class="nav_out3_1">网站首页<span></span></a>
-        </div>
-        <div class="nav_out3">
-            <a href="/Block/BlockContent.aspx?BlockId=1" class="nav_out3_1">关于金马<span></span></a>
-            <ul>
-                <li><a href="/Block/BlockContent.aspx?BlockId=1">企业介绍</a></li>
-                <li><a href="/Block/BlockContent.aspx?BlockId=4">金马文化</a></li>
-                <li><a href="/Product/List.aspx?ClassId=2">发展历史</a></li>
-                <li><a href="/Product/List.aspx?ClassId=3">荣誉资质</a></li>
-                <li><a href="/Block/BlockContent.aspx?BlockId=5">大连金马衡器校准实验室（CNAS）</a></li>
-            </ul>
-        </div>
-        <div class="nav_out3">
-            <a href="/Product/List.aspx?ClassId=5" class="nav_out3_1">产品中心<span></span></a>
-            <ul>
-                <li><a href="/Product/List.aspx?ClassId=14">ZCS地中衡/SCS地上衡</a></li>
-                <li><a href="/Product/List.aspx?ClassId=20">轨道衡</a></li>
-                <li><a href="/Product/List.aspx?ClassId=22">智能称重解决方案</a></li>
-                <li><a href="/Product/List.aspx?ClassId=27">ICS系列电子皮带秤</a></li>
-                <li><a href="/Product/List.aspx?ClassId=29">电子台秤系列</a></li>
-                <li><a href="/Product/List.aspx?ClassId=39">电子秤系列</a></li>
-                <li><a href="/Product/List.aspx?ClassId=48">OCS吊钩秤系列</a></li>
-                <li><a href="/Product/List.aspx?ClassId=51">衡器配件</a></li>
-            </ul>
-        </div>        
-		<div class="nav_out3">
-            <a href="/News/List.aspx?ClassId=2" class="nav_out3_1">金马动态<span></span></a>
-            <ul>
-                <li><a href="/News/List.aspx?ClassId=2">金马动态</a></li>
-                <li><a href="/News/List.aspx?ClassId=4">衡器知识</a></li>
-            </ul>
-        </div>
-        <div class="nav_out3">
-            <a href="/Product/List.aspx?ClassId=58" class="nav_out3_1">现场案例<span></span></a>
-            <ul>
-                <li><a href="/Product/List.aspx?ClassId=58">现场案例</a></li>
-                <li><a href="/Product/List.aspx?ClassId=60">解决方案</a></li>
-                <li><a href="/Product/List.aspx?ClassId=126">生产工艺</a></li>
-            </ul>
-        </div>
-        <div class="nav_out3">
-            <a href="/Block/BlockContent.aspx?BlockId=6" class="nav_out3_1">合作伙伴<span></span></a>
-        </div>
-        <div class="nav_out3">
-            <a href="/Block/BlockContent.aspx?BlockId=8" class="nav_out3_1">联系方式<span></span></a>
-            <ul>
-                <li><a href="/Block/BlockContent.aspx?BlockId=8">联系方式</a></li>
-                <li><a href="/Product/List.aspx?ClassId=61">诚聘英才</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<script>
-$(".header_r2").click( function () {
-	if($(".header_r3").css("display")=="none"){
-		$(".header_r2").css("background","url(images/header3.png) no-repeat center center");
-        $(".header_r3").fadeIn();
-	}else if($(".header_r3").css("display")=="block"){
-		$(".header_r2").css("background","url(images/header2.png) no-repeat center center");
-        $(".header_r3").fadeOut();
-	}
-});
-$(".top_nav").click( function () {
-    $(".nav_out").slideDown();
-});
-$(".nav_out_close").click( function () {
-    $(".nav_out").slideUp();
-});
-</script>
 <div id="scroll">
 	<div class="section section1 fp-section fp-table active">
         <div id="focusBar">
