--- a/case.html
+++ b/case.html
@@ -53,18 +53,62 @@
 	</div>
 	<div class="case_title3"></div>
 </div>
-<div class="cxtcl_div">
-	<div class="title_div">创新炭材料有限公司无人值守门禁称重项目</div>
-	<img class="cxtcl_img" src="UserFiles/Product/image/20200423/202004230001.png">
-	<div class="new_div">
-		<div class="xmgk_div">项目概况</div>
-		<div class="row_div">六台地磅，二维码无人值守称重系统。</div>
-		<div class="row_div">自动识别货运车辆信息，驾驶员凭身份证、驾驶证等唯一信息</div>
-		<div class="row_div">领取二维码，小程序排队叫号等候上磅。</div>
-		<div class="row_div">红绿灯指挥、语音叫号系统；</div>
-		<div class="row_div">红外防作弊功能，自动过磅卸车。</div>
-		<div class="row_div">二维码信息管理。</div>
-		<div class="row_div">系统自动读取重量信息上传至服务器，实现自动化与智能化管理。</div>
+<div class="cxtcl_bg_div">
+	<div class="cxtcl_div">
+		<div class="title_div">创新炭材料有限公司无人值守门禁称重项目</div>
+		<img class="cxtcl_img" src="UserFiles/Product/image/20200423/202004230001.png">
+		<div class="new_div">
+			<div class="xmgk_div">项目概况</div>
+			<div class="row_div">六台地磅，二维码无人值守称重系统。</div>
+			<div class="row_div">自动识别货运车辆信息，驾驶员凭身份证、驾驶证等唯一信息</div>
+			<div class="row_div">领取二维码，小程序排队叫号等候上磅。</div>
+			<div class="row_div">红绿灯指挥、语音叫号系统；</div>
+			<div class="row_div">红外防作弊功能，自动过磅卸车。</div>
+			<div class="row_div">二维码信息管理。</div>
+			<div class="row_div">系统自动读取重量信息上传至服务器，实现自动化与智能化管理。</div>
+		</div>
+	</div>
+</div>
+<div class="stts_bg_div">
+	<div class="stts_div">
+		<div class="title_div">索通炭素有限公司无人值守门禁称重项目</div>
+		<div class="new_div">
+			<div class="xmgk_div">项目概况</div>
+			<div class="row_div">六台地磅，IC卡无人值守以及门禁称重系统。</div>
+			<div class="row_div">自动识别货运车辆信息，自助收发卡。</div>
+			<div class="row_div">自动抬杆，红绿灯指挥、语音叫号系统；</div>
+			<div class="row_div">红外防作弊功能，自动过磅卸车。</div>
+			<div class="row_div">系统自动读取重量信息上传至服务器，与用友ERP（U9）系统进行数据对接。</div>
+		</div>
+		<img class="stts_img" src="UserFiles/Product/image/20200423/202004230002.png">
+	</div>
+</div>
+<div class="qltcl_bg_div">
+	<div class="qltcl_div">
+		<div class="title_div">齐力炭材料有限公司无人值守门禁称重项目</div>
+		<img class="qltcl_img" src="UserFiles/Product/image/20200423/202004230003.png">
+		<div class="new_div">
+			<div class="xmgk_div">项目概况</div>
+			<div class="row_div">四台地磅，IC卡无人值守以及门禁称重系统。</div>
+			<div class="row_div">自动识别货运车辆信息，自助收发卡。</div>
+			<div class="row_div">自动抬杆，红绿灯指挥、语音叫号系统；</div>
+			<div class="row_div">红外防作弊功能，自动过磅卸车。</div>
+			<div class="row_div">自动打印小票。</div>
+			<div class="row_div">系统自动读取重量信息上传至服务器，实现无人值守智能化管理。</div>
+		</div>
+	</div>
+</div>
+
+<div class="foot_div">
+	<div class="content_div">
+		<div class="space_div"></div>
+		<div class="row_div">公司名称：青岛华凌科技有限公司</div>
+		<div class="row_div">咨询热线：0532-55588351&nbsp;&nbsp;15712773653（微信同号）</div>
+		<div class="row_div">邮箱地址：qdhualing@126.com</div>
+		<div class="row_div">公司地址：青岛市北中央商务区敦化路136号西王大厦1606</div>
+	</div>
+	<div class="bah_div">
+		青岛辰麒数维软件有限公司  <a href="https://beian.miit.gov.cn" target="_blank" style="color:#999;">鲁ICP备19062226号-4</a>
 	</div>
 </div>
 </body>
