--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@ else{
     <img src="images/logo.png" class="logo" alt="" />
     <ul class="nav">
         <li>
-			<a href="/" id="home" class="a_on"><span class="span1">网站首页</span><span class="span2">网站首页</span></a>
+			<a href="index.html" id="home" class="a_on"><span class="span1">网站首页</span><span class="span2">网站首页</span></a>
 		</li>
         <li>
 			<a href="case.html" id="xcal"><span class="span1">现场案例</span><span class="span2">现场案例</span></a>
 		</li>
         <li>
-			<a href="/Block/BlockContent.aspx?BlockId=1" id="gyjm"><span class="span1">代理加盟</span><span class="span2">代理加盟</span></a>
+			<a href="agent.html" id="gyjm"><span class="span1">代理加盟</span><span class="span2">代理加盟</span></a>
 		</li>
         <li>
 			<a href="/Product/List.aspx?ClassId=5" id="cpzx"><span class="span1">新闻动态</span><span class="span2">新闻动态</span></a>
