--- a/agent.html
+++ b/agent.html
@@ -25,7 +25,7 @@
 			<a href="agent.html" class="a_on" id="gyjm"><span class="span1">代理加盟</span><span class="span2">代理加盟</span></a>
 		</li>
         <li>
-			<a href="/Product/List.aspx?ClassId=5" id="cpzx"><span class="span1">新闻动态</span><span class="span2">新闻动态</span></a>
+			<a href="new.html" id="cpzx"><span class="span1">新闻动态</span><span class="span2">新闻动态</span></a>
 		</li>
         <li>
 			<a href="/News/List.aspx?ClassId=2" id="jmdt"><span class="span1">关于华凌</span><span class="span2">关于华凌</span></a>
@@ -39,7 +39,7 @@
             <input id="btnProductSearch" type="button" onClick="Search()" class="header_r3_2" />
         </div>
         <div class="header_r4"></div>
-        <a href="/?f=indexEn" class="header_r1">EN</a>
+        <a class="header_r1">EN</a>
     </div>
     <div class="header_close"></div>
 </div>
