--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ else{
 			<a href="new.html" id="cpzx"><span class="span1">新闻动态</span><span class="span2">新闻动态</span></a>
 		</li>
         <li>
-			<a href="/News/List.aspx?ClassId=2" id="jmdt"><span class="span1">关于华凌</span><span class="span2">关于华凌</span></a>
+			<a href="aboutHL.html" id="jmdt"><span class="span1">关于华凌</span><span class="span2">关于华凌</span></a>
 		</li>
     </ul>
     <div class="header_r">
