--- a/aboutHL.html
+++ b/aboutHL.html
@@ -154,6 +154,40 @@ function createIcon(json){
 	<div class="content_div">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;青岛华凌科技有限公司致力于打造智能化制造系统平台。辰麒软件是公司旗下一重要软件品牌，致力于运用工业物联网、蓝牙定位，无线以及工业底层互联等新技术，建立企业的智能化信息平台。现有产品系列有智能门禁、无人值守智能称重、企业人员安全定位、智慧仓储等。</div>
 </div>
 
+<div class="qyzz_div">
+	<div class="zs_list_div">
+		<div class="item_div item1_div">
+			<img src="UserFiles/FriendLink/image/20211015/202110150013.png">
+		</div>
+		<div class="item_div item2_div">
+			<img src="UserFiles/FriendLink/image/20211015/202110150014.png">
+		</div>
+		<div class="item_div item3_div">
+			<img src="UserFiles/FriendLink/image/20211015/202110150015.png">
+		</div>
+	</div>
+	<div class="jbsb_div">
+		<div class="jb_div">
+			<img class="jb1_img" src="UserFiles/FriendLink/image/20211015/202110150016.png">
+			<img class="jb2_img" src="UserFiles/FriendLink/image/20211015/202110150017.png">
+		</div>
+		<div class="sb_list_div">
+			<div class="item_div iso_div">
+				<img src="UserFiles/FriendLink/image/20211015/202110150018.png">
+				<div class="text_div">ISO9001质量管理体系认证</div>
+			</div>
+			<div class="item_div gxq_div">
+				<img src="UserFiles/FriendLink/image/20211015/202110150019.png">
+				<div class="text_div">高新区创新企业</div>
+			</div>
+			<div class="item_div sds_div">
+				<img src="UserFiles/FriendLink/image/20211015/202110150020.png">
+				<div class="text_div">山东省软件企业</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!--百度地图容器-->
 <div class="dituContent_div" id="dituContent"></div>
 
