--- a/aboutHL.html
+++ b/aboutHL.html
@@ -151,7 +151,9 @@ function createIcon(json){
 	<img class="left_img" src="UserFiles/FriendLink/image/20211015/202110150011.png">
 	<img class="right_img" src="UserFiles/FriendLink/image/20211015/202110150012.png">
 	<div class="title_div">青岛华凌科技有限公司</div>
-	<div class="content_div">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;青岛华凌科技有限公司致力于打造智能化制造系统平台。辰麒软件是公司旗下一重要软件品牌，致力于运用工业物联网、蓝牙定位，无线以及工业底层互联等新技术，建立企业的智能化信息平台。现有产品系列有智能门禁、无人值守智能称重、企业人员安全定位、智慧仓储等。</div>
+	<div class="content_div">
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;青岛华凌科技有限公司致力于打造智能化制造系统平台。辰麒软件是公司旗下一重要软件品牌，致力于运用工业物联网、蓝牙定位，无线以及工业底层互联等新技术，建立企业的智能化信息平台。现有产品系列有智能门禁、无人值守智能称重、企业人员安全定位、智慧仓储等。
+	</div>
 </div>
 
 <div class="qyzz_div">
