--- a/index.html
+++ b/index.html
@@ -559,7 +559,24 @@ else{
 	<div class="xtywlc_div">
 		<div class="title_div">系统业务流程</div>
 		<div class="content_div">
-			<img src="UserFiles/FriendLink/image/20211015/202110150007.png" alt="无人值守车辆自动称重系统" />
+			<!--
+			<img src="UserFiles/FriendLink/image/20211015/aaa.png" alt="无人值守车辆自动称重系统" />
+			-->
+			<img class="xtywlct_img" src="UserFiles/FriendLink/image/20211015/202110150007.png" />
+			<div class="list_div" style="width:500px;height:642px;margin-top: -500px;margin-left: 200px;background:#0f0;">
+				<div class="item_div" style="width:100%;height:161px;background:#00f;">
+					<img class="img1" src="UserFiles/FriendLink/image/20211015/202110150028.png" />
+					<div style="width:358px;height:113px;margin-top:-155px;margin-left:100px;background: url(UserFiles/FriendLink/image/20211015/202110150029.png) top center no-repeat;">
+						<div style="width:175px;height:40px;line-height:40px;margin-left: 125px;font-size:20px;text-align:center;background-color:#D9D9D9;border-radius:25px;">磅房</div>
+						<div style="width:200px;margin-top:10px;margin-left: 100px;font-size:15px;">司机不下车刷卡，语音提示保持车身稳定。</div>
+					</div>
+					<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150031.png" style="margin-top: -145px;margin-left: 415px;position: absolute;" />
+					<div class="img3_div" style="margin-top: -120px;margin-left: 442px;color:#FFC000;position: absolute;">
+						<img src="UserFiles/FriendLink/image/20211015/202110150032.png" />
+						<div style="width:67px;height:67px;line-height:67px;margin-top: -67px;font-size:25px;text-align:center;">06</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
