--- a/index.html
+++ b/index.html
@@ -559,23 +559,85 @@ else{
 	<div class="xtywlc_div">
 		<div class="title_div">系统业务流程</div>
 		<div class="content_div">
-			<!--
-			<img src="UserFiles/FriendLink/image/20211015/aaa.png" alt="无人值守车辆自动称重系统" />
-			-->
 			<img class="xtywlct_img" src="UserFiles/FriendLink/image/20211015/202110150007.png" />
-			<div class="list_div" style="width:500px;height:642px;margin-top: -500px;margin-left: 200px;background:#0f0;">
-				<div class="item_div" style="width:100%;height:161px;background:#00f;">
-					<img class="img1" src="UserFiles/FriendLink/image/20211015/202110150028.png" />
-					<div style="width:358px;height:113px;margin-top:-155px;margin-left:100px;background: url(UserFiles/FriendLink/image/20211015/202110150029.png) top center no-repeat;">
-						<div style="width:175px;height:40px;line-height:40px;margin-left: 125px;font-size:20px;text-align:center;background-color:#D9D9D9;border-radius:25px;">磅房</div>
-						<div style="width:200px;margin-top:10px;margin-left: 100px;font-size:15px;">司机不下车刷卡，语音提示保持车身稳定。</div>
+			<div class="left_list_div">
+				<div class="item_div">
+					<img class="img1 bf_img1" src="UserFiles/FriendLink/image/20211015/202110150028.png" />
+					<div class="cont_bg_div bf_cb_div">
+						<div class="tit_div">磅房</div>
+						<div class="cont_div">司机不下车刷卡，语音提示保持车身稳定。</div>
 					</div>
-					<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150031.png" style="margin-top: -145px;margin-left: 415px;position: absolute;" />
-					<div class="img3_div" style="margin-top: -120px;margin-left: 442px;color:#FFC000;position: absolute;">
+					<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150031.png" />
+					<div class="img3_div">
 						<img src="UserFiles/FriendLink/image/20211015/202110150032.png" />
-						<div style="width:67px;height:67px;line-height:67px;margin-top: -67px;font-size:25px;text-align:center;">06</div>
+						<div class="text_div">06</div>
 					</div>
 				</div>
+				<div class="item_div">
+					<img class="img1 zjcy_img1" src="UserFiles/FriendLink/image/20211015/202110150033.png" />
+					<div class="cont_bg_div zjcy_cb_div">
+						<div class="tit_div">质检采样</div>
+						<div class="cont_div">司机到达化验室刷卡进行取样化验</div>
+					</div>
+					<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150034.png" />
+					<div class="img3_div">
+						<img src="UserFiles/FriendLink/image/20211015/202110150032.png" />
+						<div class="text_div">04</div>
+					</div>
+				</div>
+				<div class="item_div">
+					<img class="img1 xgbm_img1" src="UserFiles/FriendLink/image/20211015/202110150035.png" />
+					<div class="cont_bg_div xgbm_cb_div">
+						<div class="tit_div">相关部门</div>
+						<div class="cont_div">管理人员制定计划/订单，录入车辆以及身份信息</div>
+					</div>
+					<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150036.png" />
+					<div class="img3_div">
+						<img src="UserFiles/FriendLink/image/20211015/202110150032.png" />
+						<div class="text_div">02</div>
+					</div>
+				</div>
+			</div>
+			<div class="right_list_div">
+				<div class="item_div">
+					<div class="img1_div">
+						<img src="UserFiles/FriendLink/image/20211015/202110150032.png" />
+						<div class="text_div">05</div>
+					</div>
+					<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150037.png" />
+					<div class="cont_bg_div">
+						<div class="tit_div">仓库</div>
+						<div class="cont_div">防作弊检测自动检斤，语音提示检斤成功车辆请下磅，一检成功，车辆驶入仓库卸货。</div>
+					</div>
+					<img class="cangku_img3" src="UserFiles/FriendLink/image/20211015/202110150038.png" />
+				</div>
+				<div class="item_div">
+					<div class="img1_div">
+						<img src="UserFiles/FriendLink/image/20211015/202110150032.png" />
+						<div class="text_div">03</div>
+					</div>
+					<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150039.png" />
+					<div class="cont_bg_div">
+						<div class="tit_div">磅房</div>
+						<div class="cont_div">检验合格后车辆上磅，语音提示司机刷卡。</div>
+					</div>
+					<img class="bangfang_img3" src="UserFiles/FriendLink/image/20211015/202110150040.png" />
+				</div>
+				<div class="item_div">
+					<div class="img1_div">
+						<img src="UserFiles/FriendLink/image/20211015/202110150032.png" />
+						<div class="text_div">01</div>
+					</div>
+					<img class="mengang_img2" src="UserFiles/FriendLink/image/20211015/202110150041.png" />
+					<div class="cont_bg_div">
+						<div class="tit_div">门岗</div>
+						<div class="cont_div">司机在门岗设备上刷身份证，取卡绑定订单、排队等待检斤</div>
+					</div>
+					<img class="mengang_img3" src="UserFiles/FriendLink/image/20211015/202110150042.png" />
+				</div>
+			</div>
+			<div class="right_point_div">
+				<img src="UserFiles/FriendLink/image/20211015/202110150044.png" />
 			</div>
 		</div>
 	</div>
