--- a/case.html
+++ b/case.html
@@ -99,6 +99,33 @@
 	</div>
 </div>
 
+<div class="img_list_div">
+	<div class="item_div">
+		<div class="img_div">
+			<img src="UserFiles/Product/image/20200423/202004230004.png">
+			<div class="text_div">
+				德州新材料有限公司
+			</div>
+		</div>
+	</div>
+	<div class="item_div cxtcl_div">
+		<div class="img_div">
+			<img src="UserFiles/Product/image/20200423/202004230001.png">
+			<div class="text_div">
+				创新炭材料有限公司
+			</div>
+		</div>
+	</div>
+	<div class="item_div stts_div">
+		<div class="img_div">
+			<img src="UserFiles/Product/image/20200423/202004230005.png">
+			<div class="text_div">
+				索通碳素有限公司
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="foot_div">
 	<div class="content_div">
 		<div class="space_div"></div>
