--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@ else{
 				<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
 				<span class="gyjhj_span">工业交换机</span>
 				<img class="img3" src="UserFiles/FriendLink/image/20211015/202110150050.png"/>
-				<span class="fwq_span" style="margin-top:295px;margin-left:25px;font-size:15px;position:absolute;">服务器</span>
-				<img class="img4" src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 241px;margin-left:85px;position: absolute;"/>
+				<span class="fwq_span">服务器</span>
+				<img class="img4" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
 				<img class="img5" src="UserFiles/FriendLink/image/20211015/202110150051.png" style="margin-top: 324px;margin-left:50px;position: absolute;"/>
 				<img class="img6" src="UserFiles/FriendLink/image/20211015/202110150052.png" style="width: 105px;height:59px;margin-top: 98px;margin-left:145px;position: absolute;"/>
 				<span class="zzfkxt_span" style="margin-top:127px;margin-left:153px;color:#fff;font-size:15px;position:absolute;">自助发卡系统</span>
