--- a/index.html
+++ b/index.html
@@ -346,7 +346,6 @@ else{
 		-->
 		<div class="title2">无人值守系统架构</div>
 		<div class="content_div">
-			<img src="UserFiles/FriendLink/image/20190729/20190729132257_3411.png" alt="无人值守车辆自动称重系统" />
 			<div class="left_div">
 				<div class="item_div ycgb_item_div">
 					<div class="title_div">一次过磅</div>
@@ -377,38 +376,38 @@ else{
 				<img class="img3" src="UserFiles/FriendLink/image/20211015/202110150050.png"/>
 				<span class="fwq_span">服务器</span>
 				<img class="img4" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
-				<img class="img5" src="UserFiles/FriendLink/image/20211015/202110150051.png" style="margin-top: 324px;margin-left:50px;position: absolute;"/>
-				<img class="img6" src="UserFiles/FriendLink/image/20211015/202110150052.png" style="width: 105px;height:59px;margin-top: 98px;margin-left:145px;position: absolute;"/>
-				<span class="zzfkxt_span" style="margin-top:127px;margin-left:153px;color:#fff;font-size:15px;position:absolute;">自助发卡系统</span>
-				<img class="img7" src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 149px;margin-left:193px;position: absolute;"/>
-				<span style="margin-top:43px;margin-left:278px;color:#000;font-size:18px;position:absolute;">门禁车辆进厂</span>
-				<img class="img8" src="UserFiles/FriendLink/image/20211015/202110150053.png" style="margin-top: 98px;margin-left:263px;position: absolute;"/>
-				<img class="img9" src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 149px;margin-left:316px;position: absolute;"/>
-				<img class="img10" src="UserFiles/FriendLink/image/20211015/202110150052.png" style="width: 130px;height:73px;margin-top: 87px;margin-left:390px;position: absolute;"/>
-				<span style="margin-top:120px;margin-left:417px;color:#fff;font-size:20px;position:absolute;">自动称重</span>
-				<img class="img11" src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 149px;margin-left:452px;position: absolute;"/>
-				<img class="img12" src="UserFiles/FriendLink/image/20211015/202110150054.png" style="width: 46px;height:54px;margin-top: 163px;margin-left:495px;position: absolute;"/>
-				<img class="img13" src="UserFiles/FriendLink/image/20211015/202110150055.png" style="width: 46px;height:54px;margin-top: 163px;margin-left:538px;position: absolute;"/>
-				<span style="margin-top:43px;margin-left:635px;color:#000;font-size:18px;position:absolute;">自助收卡业务</span>
-				<img class="img14" src="UserFiles/FriendLink/image/20211015/202110150056.png" style="width: 98px;height:72px;margin-top: 84px;margin-left:640px;position: absolute;"/>
-				<img class="img15" src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 149px;margin-left:685px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150057.png" style="margin-top: 226px;margin-left:125px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150058.png" style="width: 40px;height:32px;margin-top: 219px;margin-left:132px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150050.png" style="margin-top: 219px;margin-left:210px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150050.png" style="margin-top: 237px;margin-left:210px;position: absolute;z-index: 1;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150050.png" style="margin-top: 219px;margin-left:416px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150050.png" style="margin-top: 237px;margin-left:416px;position: absolute;z-index: 1;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150050.png" style="margin-top: 225px;margin-left:649px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 241px;margin-left:246px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150059.png" style="margin-top: 275px;margin-left:161px;position: absolute;"/>
-				<span style="margin-top: 435px;margin-left:190px;font-size:20px;font-weight: bold;position: absolute;">数据管理中心</span>
-				<span style="margin-top: 245px;margin-left:340px;font-size:15px;position: absolute;">局域网</span>
-				<img src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 241px;margin-left:452px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150059.png" style="margin-top: 275px;margin-left:366px;position: absolute;"/>
-				<span style="margin-top: 435px;margin-left:407px;font-size:20px;font-weight: bold;position: absolute;">集团办公网</span>
-				<img src="UserFiles/FriendLink/image/20211015/202110150049.png" style="margin-top: 241px;margin-left:685px;position: absolute;"/>
-				<img src="UserFiles/FriendLink/image/20211015/202110150060.png" style="width: 150px;height:107px;margin-top: 300px;margin-left:617px;position: absolute;"/>
-				<span style="margin-top: 435px;margin-left:630px;font-size:20px;font-weight: bold;position: absolute;">其他系统对接</span>
+				<img class="img5" src="UserFiles/FriendLink/image/20211015/202110150051.png"/>
+				<img class="img6" src="UserFiles/FriendLink/image/20211015/202110150052.png"/>
+				<span class="zzfkxt_span">自助发卡系统</span>
+				<img class="img7" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
+				<span class="mjcljc_span">门禁车辆进厂</span>
+				<img class="img8" src="UserFiles/FriendLink/image/20211015/202110150053.png"/>
+				<img class="img9" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
+				<img class="img10" src="UserFiles/FriendLink/image/20211015/202110150052.png"/>
+				<span class="zdcz_span">自动称重</span>
+				<img class="img11" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
+				<img class="img12" src="UserFiles/FriendLink/image/20211015/202110150054.png"/>
+				<img class="img13" src="UserFiles/FriendLink/image/20211015/202110150055.png"/>
+				<span class="zzskyw_span">自助收卡业务</span>
+				<img class="img14" src="UserFiles/FriendLink/image/20211015/202110150056.png"/>
+				<img class="img15" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
+				<img class="img16" src="UserFiles/FriendLink/image/20211015/202110150057.png"/>
+				<img class="img17" src="UserFiles/FriendLink/image/20211015/202110150058.png"/>
+				<img class="img18" src="UserFiles/FriendLink/image/20211015/202110150050.png"/>
+				<img class="img19" src="UserFiles/FriendLink/image/20211015/202110150050.png"/>
+				<img class="img20" src="UserFiles/FriendLink/image/20211015/202110150050.png"/>
+				<img class="img21" src="UserFiles/FriendLink/image/20211015/202110150050.png"/>
+				<img class="img22" src="UserFiles/FriendLink/image/20211015/202110150050.png"/>
+				<img class="img23" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
+				<img class="img24" src="UserFiles/FriendLink/image/20211015/202110150059.png"/>
+				<span class="sjglzx_span">数据管理中心</span>
+				<span class="jyw_span">局域网</span>
+				<img class="img25" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
+				<img class="img26" src="UserFiles/FriendLink/image/20211015/202110150059.png"/>
+				<span class="jtbgw_span">集团办公网</span>
+				<img class="img27" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
+				<img class="img28" src="UserFiles/FriendLink/image/20211015/202110150060.png"/>
+				<span class="qtxtdj_span">其他系统对接</span>
 			</div>
 		</div>
 	</div>
