--- a/index.html
+++ b/index.html
@@ -346,29 +346,7 @@ else{
 		-->
 		<div class="title2">无人值守系统架构</div>
 		<div class="content_div">
-			<div class="left_div">
-				<div class="item_div ycgb_item_div">
-					<div class="title_div">一次过磅</div>
-					<img src="UserFiles/FriendLink/image/20211015/202110150045.png"/>
-				</div>
-				<div class="item_div ecgb_item_div">
-					<div class="title_div">二次过磅</div>
-					<img src="UserFiles/FriendLink/image/20211015/202110150045.png"/>
-				</div>
-				<div class="item_div clzc_item_div">
-					<div class="title_div">车辆装车</div>
-					<img src="UserFiles/FriendLink/image/20211015/202110150046.png"/>
-				</div>
-				<div class="item_div qyhy_item_div">
-					<div class="title_div">取样化验</div>
-					<img src="UserFiles/FriendLink/image/20211015/202110150047.png"/>
-				</div>
-				<div class="item_div clxc_item_div">
-					<div class="title_div">车辆卸车</div>
-					<img src="UserFiles/FriendLink/image/20211015/202110150046.png"/>
-				</div>
-			</div>
-			<div class="right_div">
+			<div class="up_div">
 				<span class="wlwg_span">物联网关</span>
 				<img class="img1" src="UserFiles/FriendLink/image/20211015/202110150048.png"/>
 				<img class="img2" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
@@ -408,6 +386,28 @@ else{
 				<img class="img27" src="UserFiles/FriendLink/image/20211015/202110150049.png"/>
 				<img class="img28" src="UserFiles/FriendLink/image/20211015/202110150060.png"/>
 				<span class="qtxtdj_span">其他系统对接</span>
+			</div>
+			<div class="down_div">
+				<div class="item_div ycgb_item_div">
+					<div class="title_div">一次过磅</div>
+					<img src="UserFiles/FriendLink/image/20211015/202110150045.png"/>
+				</div>
+				<div class="item_div ecgb_item_div">
+					<div class="title_div">二次过磅</div>
+					<img src="UserFiles/FriendLink/image/20211015/202110150045.png"/>
+				</div>
+				<div class="item_div clzc_item_div">
+					<div class="title_div">车辆装车</div>
+					<img src="UserFiles/FriendLink/image/20211015/202110150046.png"/>
+				</div>
+				<div class="item_div qyhy_item_div">
+					<div class="title_div">取样化验</div>
+					<img src="UserFiles/FriendLink/image/20211015/202110150047.png"/>
+				</div>
+				<div class="item_div clxc_item_div">
+					<div class="title_div">车辆卸车</div>
+					<img src="UserFiles/FriendLink/image/20211015/202110150046.png"/>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -540,7 +540,7 @@ else{
 		<div class="content_div">
 			<div class="img_div">
 				<img class="left_img" src="UserFiles/FriendLink/image/20211015/202110150001.png"/>
-				<img class="right_img" src="UserFiles/FriendLink/image/20211015/202110150002.png"/>
+				<img class="right_img" src="UserFiles/FriendLink/image/20211015/202110150002.jpg"/>
 			</div>
 			<div class="sm_list_div">
 				<div class="item_div rjjs_item_div">
